--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^5.0.0
   dio: ^5.8.0+1
   get: ^4.7.2
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
