--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.8.0+1
   get: ^4.7.2
   curved_navigation_bar: ^1.0.6
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
